<resources>
    <string name="app_name">Escape from Tarkov Guide</string>
    <string name="main">Справочник по игре "Escape from Tarkov</string>
    <string name="startButton">начать</string>
    <string name="fight">Ведение боя</string>
    <string name="About">Информация о программе</string>
    <string name="AboutText">Программа разработана\n в рамках учебной практики в МГГТК ФГБОУ ВО «АГУ» \n\n Выполнил: Ефименко Максим</string>

    <string name="Next">Далее</string>
    <string name="Back">Назад</string>
    <string name="Inventory">Инвентарь</string>
    <string name="Shelter">Убежище</string>
    <string name="Loot">Лут</string>
    <string name="Fraction">Фракции</string>
    <string name="Trader">Торговцы</string>
    <string name="Medicine">Медицина</string>
    <string name="Maps">Карты</string>
    <string name="Info">О программе</string>

    <string name="Берег">Карта: Берег\nДлительность рейда: 45 минут\nКол-во игроков: 10-13</string>
    <string name="Завод">Карта: Завод\nДлительность рейда: Днём: 20 минут. Ночью: 25 минут\nКол-во игроков:  5-6</string>
    <string name="Лаборатория">Карта: Лаборатория\nДлительность рейда: 35 минут\nКол-во игроков: 6-10</string>
    <string name="Лес">Карта: Лес\nДлительность рейда: 40 минут\nКол-во игроков: 8-14</string>
    <string name="Маяк">Карта: Маяк\nДлительность рейда: 35 минут\nКол-во игроков: 9-12</string>
    <string name="Развязка">Карта: Развязка\nДлительность рейда: 40 минут\nКол-во игроков: 10-14</string>
    <string name="Резерв">Карта: Резерв\n Длительность рейда: 40 минут\nКол-во игроков: 10-13</string>
    <string name="Таможня">Карта: Таможня\nДлительность рейда: 40 минут\nКол-во игроков: 8-12</string>

    <string name="Инвентарь_1">Инвентарь состоит из: </string>
    <string name="Инвентарь_2">Экипировки, которой снаряжается игрок для похода в бой.</string>
    <string name="Инвентарь_3">Схрона, где хранятся все его предметы, найденные в рейде, либо приобретённые другим способом.</string>
    <string name="Инвентарь_4">Различных инструментов сортировки. </string>
    <string name="Инвентарь_5">Хотбара для быстрого доступа к предметам (например аптечкам) во время рейда. </string>

    <string name="Рейд1">Бой начинается с того, что игрок появляется в случайном месте, доступном для определенной группировки:\nДля ЧВК они свои, для Дикого они тоже свои.\n\nВо время рейда в первую очередь вам нужно выжить, то есть определить, к какому выходу вы будете направляться.\nВыходы определяются в случайном порядке, зависящем от появления игрока на карте.\nВ течение боя вам могут встретиться контейнеры, здания, сумки и тому подобные вещи, содержащие предметы, которые вам можно взять с собой.\n\Так же по всей карте вы можете встретить других игроков, точно так же как и вы, рыскающих в поисках лута.\nУбивать их или же договориться - решать вам.\n\nВыходы могут охранять кемперы, которые просто хотят нажиться на ваших ресурсах и без опаски выйти из рейда.\n\nБудьте осторожны, ваши потенциальные враги могут сидеть в любом кусте, в любой тени. Вслушивайтесь в каждый шорох издаваемый природой.\n</string>

    <string name="Лут_1">На картинке ниже представлен самый важный лут который присутствует в игре: </string>
    <string name="Лут_2">Ниже представлены все предметы, которые можно использовать для обмена с торговцами: </string>
    <string name="Лут_3">Здесь показаны все предметы для убежища:</string>

    <string name="Медицина_1">Здоровье игрока представлено в виде: </string>
    <string name="Медицина_2">Все возможные статусы здоровья: </string>
    <string name="Медицина_3">Все эффекты которые могут накладываться на игрока: </string>

    <string name="Убежище_1">Убежище состоит из:\n\n- Безопасность\n- Библиотека\n- Биткоин ферма\n- Вентиляция\n- Верстак\n- Водосборник\n- Воздушный фильтратор\n- Генератор\n- Зона отдыха\n- Медблок\n- Обогрев\n- Освещение\n- Пищеблок\n- Разведцентр\n- Самогонный Аппарат\n- Санузел\n- Склад\n- Солнечная батарая\n- Тир\n- Ящик диких\n- Ёлка</string>
    <string name="Убежище_2">Улучшение убежища предоставить игроку новые удобства для игры, новые функции. Например:\nЯщик диких, Верстак, Место, где можно отремонтировать свою броню или отдохнуть. </string>

    <string name="Фракции_1">В игре есть две основные фракции за которые можно играть:\nДикие и ЧВК.\n\Боссы:\n\n- Решала. \nСпавн: Таможня 10%.
        \n\n- Килла. \nСпавн: Развязка 10%.\n\n- Глухарь. \nСпавн: Резерв 10%\n\n- Штурман. \nСпавн: Лес 10%\n\n- Санитар. \nСпавн: Берег 10%
        \n\n- Тагилла. \nСпавн: Завод 10%\n\n- Рейдеры. \nСпавн: Лаборатория 100%, Резерв ??%\n\n- Сектант Жрец. \nСпавн: Завод(ночной) 2%, Таможня 2%, Лес 5%, Берег 5%
        \n\n- Отступники. \nСпавн: Маяк 100%\n\n- Big Pipe. \nСпавн: Таможня 10%, Лес 10%, Берег 10%, Маяк 10%\n\n- Birdeye. \nСпавн: Таможня 10%, Лес 10%, Берег 10%, Маяк 10%
        \n\n- Death Knight. \nСпавн: Таможня 10%, Лес 10%, Берег 10%, Маяк 10%\n\n- Зрячий. \nСпавн: Маяк 100%\n\n- Кабан. \nСпавн: Улицы Таркова 7% </string>

    <string name="Торговцы_1">У торговцев можно покупать и продавать предметы, брать квесты, за которые можно получить награду.
        \n\nНиже приведён список всех торговцев: </string>

</resources>