<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frame1"
    tools:context=".InventoryActivity">

    <TextView
        android:id="@+id/textBack2"
        android:layout_width="110sp"
        android:layout_height="48sp"
        android:background="@color/dark_light_gray"
        android:clickable="true"
        android:fontFamily="sans-serif-light"
        android:onClick="onClick"
        android:text="@string/Back"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/textViewFraction2"
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="661dp"
        android:background="@color/dark_light_gray"
        android:text="@string/Inventory"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="320dp"
        android:layout_height="550dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFraction2"
        app:layout_constraintVertical_bias="0.13999999">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textInv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Инвентарь_1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textInv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Инвентарь_2"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/imageEquipment"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                app:srcCompat="@drawable/inv_equipment" />

            <TextView
                android:id="@+id/textSkip8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textInv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Инвентарь_3"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/imageShron"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:srcCompat="@drawable/inv_schron" />

            <TextView
                android:id="@+id/textSkip9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textInv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Инвентарь_4"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/imageSort"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/inv_sort" />

            <TextView
                android:id="@+id/textSkip10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textInv5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Инвентарь_5"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/imageHotbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:srcCompat="@drawable/inv_hotbar" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>