<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frame1"
    tools:context=".LootActivity">

    <TextView
        android:id="@+id/textBack4"
        android:layout_width="110sp"
        android:layout_height="48sp"
        android:background="@color/dark_light_gray"
        android:clickable="true"
        android:fontFamily="sans-serif-light"
        android:onClick="onClick"
        android:text="@string/Back"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <ScrollView
        android:layout_width="320dp"
        android:layout_height="550dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoot"
        app:layout_constraintVertical_bias="0.13999999">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textLoot1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Лут_1"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/imageLoot1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:srcCompat="@drawable/loot_1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textLoot2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Лут_2"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/loot_barter" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textLoot3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Лут_3"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:srcCompat="@drawable/loot_shelter" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textViewLoot"
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="661dp"
        android:background="@color/dark_light_gray"
        android:text="@string/Loot"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>